--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -204,7 +204,7 @@ background-repeat:no-repeat;*/ background-color: #747877; background-image: -moz
 #wrapper footer { height: 40px; width: 100%; clear: both; display: block; font-family: "Signika", Verdana, Geneva, arial, sans-serif; }
 #wrapper footer #footer_nav { background-color: #303836; height: 40px; width: 100%; margin: 0px auto; }
 #wrapper footer #footer_nav ul { height: 40px; width: 75%; margin: 0px; margin: 0 auto; text-align: center; }
-#wrapper footer #footer_nav li { height: 40px; list-style: none; width: 16.6682%; float: left; background-color: #303836; display: inline-block; text-align: center; font-size: 1em; }
+#wrapper footer #footer_nav li { height: 40px; list-style: none; width: 16.66%; float: left; background-color: #303836; display: inline-block; text-align: center; font-size: 1em; }
 #wrapper footer #footer_nav li:hover { background-color: #fc773c; }
 #wrapper footer #footer_nav a { height: 40px; line-height: 40px; width: 100%; color: #FFFFFF; font-size: 0.85em; font-family: "Signika", Verdana, Geneva, arial, sans-serif; display: block; }
 #wrapper footer #footer_nav a:hover { color: #FFFFFF; background-color: #fc773c; }
@@ -319,7 +319,7 @@ background-repeat:no-repeat;*/ background-color: #747877; background-image: -moz
   #wrapper #right_coler #image5 h2 { font-size: 0.90em; height: 30px; line-height: 30px; }
   #wrapper #right_coler #image5 p { font-size: 0.60em; width: 96%; margin: 5px auto; }
   #wrapper #right_coler #image5 form { width: 96%; }
-  #wrapper #right_coler #image5 form input[type="submit"] { width: 59.37931%; font-size: 0.80em; }
+  #wrapper #right_coler #image5 form input[type="submit"] { width: 59.37931%; font-size: 0.90em; }
   #wrapper #inner_wrapper .panel h2 { font-size: 1em; }
   #wrapper #inner_wrapper #newsletter .newsletter input[type="text"] { padding: 0.3rem; }
   #wrapper #inner_wrapper #newsletter .newsletter input[type="email"] { padding: 0.3rem; } }
@@ -347,29 +347,35 @@ background-repeat:no-repeat;*/ background-color: #747877; background-image: -moz
   #wrapper .specials_box .specials_box_img p { font-size: 0.75em; width: 48.44444%; }
   #wrapper #worldsearchform h2 { font-size: 1.2em; width: 70%; }
   #wrapper #right_coler { padding: 0px; font-size: 0.7em; }
-  #wrapper #right_coler #image5 { height: 230px; margin: 4% auto; }
+  #wrapper #right_coler #image5 { height: 250px; margin: 4% auto; }
   #wrapper #right_coler #image5 h2 { font-size: 1.1em; margin: 1% auto; }
   #wrapper #right_coler #image5 p { width: 96%; margin: 5% auto; font-size: 0.80em; }
   #wrapper #right_coler #image5 form { padding: 5px; }
   #wrapper #right_coler #image5 input[type="submit"] { width: 120px; height: 34px; margin: 5px auto; background-color: #EF3528; font-family: "Signika", Verdana, Geneva, arial, sans-serif; color: #FFFFFF; border: 0; }
-  #wrapper #right_coler #image3 { height: 230px; margin: 4% auto; }
+  #wrapper #right_coler #image3 { height: 250px; margin: 4% auto; }
   #wrapper #right_coler #image3 h2 { font-size: 1.1em; margin: 1% auto; }
   #wrapper #right_coler #image3 p { width: 96%; margin: 5% auto; font-size: 0.80em; }
   #wrapper #right_coler #image3 .link_btn { margin: 2% auto; text-align: center; }
   #wrapper #right_coler #image3 .link_btn a { color: #FFFFFF; width: 100%; font-size: 1.1em; text-align: center; margin: auto; height: 34px; }
-  #wrapper #right_coler #image2 { height: 230px; margin: 4% auto; }
+  #wrapper #right_coler #image2 { height: 250px; margin: 4% auto; }
   #wrapper #right_coler #image2 p { width: 96%; margin: 5% auto; font-size: 0.80em; }
   #wrapper #right_coler #image2 h2 { font-size: 1.1em; margin: 1% auto; }
   #wrapper #right_coler #image2 .link_btn { margin: 5px auto; text-align: center; }
   #wrapper #right_coler #image2 .link_btn a { color: #FFFFFF; width: 100%; font-size: 1.1em; }
   #wrapper #inner_wrapper .panel { float: left; }
-  #wrapper #inner_wrapper .panel h2 { font-size: 1em; text-align: center; height: auto; margin: 0px; }
-  #wrapper #inner_wrapper .panel p { font-size: 0.66em; width: 100%; margin: 10% auto; }
+  #wrapper #inner_wrapper .panel h2 { font-size: 1em; text-align: center; height: auto; margin: 0px; line-height: 25px; }
+  #wrapper #inner_wrapper .panel p { font-size: 0.63em; width: 100%; margin: 10% auto; }
   #wrapper #inner_wrapper .panel figure { margin: 0; }
   #wrapper #inner_wrapper .panel .link_btn { font-size: 0.9em; }
   #wrapper #inner_wrapper #newsletter .newsletter { width: 98%; } }
 @media (max-width: 736px) { #wrapper #header #primary_nav a { font-size: 0.75em; }
-  #wrapper #left_column h3 { font-size: 1em; } }
+  #wrapper #left_column h3 { font-size: 1em; }
+  #wrapper .specials_box .specials_btn_box .special_price { font-size: 1.2em; }
+  #wrapper .specials_box .specials_btn_box .cont_btn a { font-size: 0.8em; }
+  #wrapper .specials_box .specials_box_txt p { width: 231px; }
+  #wrapper #left_column p { font-size: 0.8em; }
+  #wrapper #left_column #contact_form label { font-size: 1em; }
+  #wrapper #banner figcaption { font-size: 0.9em; } }
 @media (max-width: 667px) { #wrapper h1 { font-size: 1.5em; }
   #wrapper .ui-tabs .ui-tabs-panel { padding: 1% 0; }
   #wrapper [data-abide].error small.error { font-size: 0.65rem; margin-bottom: 0.5rem; }
@@ -443,11 +449,11 @@ background-repeat:no-repeat;*/ background-color: #747877; background-image: -moz
   #wrapper #banner .big { font-size: 1.8em; }
   #wrapper #banner figcaption { font-size: 0.9em; }
   #wrapper #index_form_btn { font-size: 1.5em; }
-  #wrapper #inner_wrapper .panel { padding-top: 20px; height: 280px; }
+  #wrapper #inner_wrapper .panel { height: 280px; }
   #wrapper #inner_wrapper .panel h2 { font-size: 0.9em; height: 40px; line-height: 1.5em; text-align: center; }
   #wrapper #inner_wrapper .panel p { font-size: 0.65em; }
   #wrapper #inner_wrapper .panel input[type="text"] { width: 100%; margin: auto; }
-  #wrapper #inner_wrapper .panel .link_btn, #wrapper #inner_wrapper .panel .newsletter a { font-size: 0.9em; width: 65.379%; }
+  #wrapper #inner_wrapper .panel .link_btn { width: 72.37931%; }
   #wrapper #inner_wrapper #newsletter .newsletter input[type="email"] { margin-top: 0.1rem; }
   #wrapper #inner_wrapper #newsletter .newsletter input[type="text"] { margin-top: 0.3rem; }
   #wrapper #inner_wrapper #newsletter .newsletter input[type="submit"] { width: 65.379%; font-size: 0.85em; }
@@ -499,8 +505,8 @@ background-repeat:no-repeat;*/ background-color: #747877; background-image: -moz
   #wrapper #banner figcaption { font-size: 0.7em; margin: 0; }
   #wrapper #banner p { font-size: 1em; }
   #wrapper #left_column h1 { margin: 1%; width: 100%; font-size: 1.8em; }
-  #wrapper #left_column .cars_box .cars_box_img img { margin: 0; width: 94.324%; }
-  #wrapper #left_column .cars_box .cars_box_img { float: left; width: 50%; }
+  #wrapper #left_column .cars_box .cars_box_img img { margin: 0; width: 100%; }
+  #wrapper #left_column .cars_box .cars_box_img { float: left; width: 51%; }
   #wrapper #left_column .cars_box a img { width: 50%; }
   #wrapper #left_column #contact_form { width: 90%; height: auto; margin-left: 2%; }
   #wrapper #left_column #contact_form label { width: 23%; }
@@ -512,19 +518,25 @@ background-repeat:no-repeat;*/ background-color: #747877; background-image: -moz
   #wrapper #worldsearchform { width: 70%; }
   #wrapper #right_coler { display: none; }
   #wrapper .ui-tabs .ui-tabs-nav a { margin: 0px; padding: 0.68em; font-size: 0.99em; }
-  #wrapper #inner_wrapper .panel { float: left; height: 250px; width: 48%; padding: 10px 5px; background-repeat: no-repeat; font-size: 1.2em; }
-  #wrapper #inner_wrapper .panel h2 { text-align: center; font-size: 90%; height: 25px; line-height: 25px; text-indent: 0px; }
-  #wrapper #inner_wrapper .panel .front_img { width: 60%; margin: auto; }
-  #wrapper #inner_wrapper .panel p { font-size: 0.5em; width: 96%; margin: 0.5em auto; }
-  #wrapper #inner_wrapper .panel .link_btn, #wrapper #inner_wrapper .panel .newsletter a { font-size: 0.8em; margin: auto; }
+  #wrapper #inner_wrapper .panel { float: left; height: 280px; width: 48%; padding: 10px 5px; background-repeat: no-repeat; font-size: 1.2em; }
+  #wrapper #inner_wrapper .panel h2 { text-align: center; font-size: 90%; text-indent: 0px; }
+  #wrapper #inner_wrapper .panel .front_img { margin: auto; }
+  #wrapper #inner_wrapper .panel p { font-size: 0.55em; width: 98%; margin: 0.5em auto; }
+  #wrapper #inner_wrapper .panel .link_btn, #wrapper #inner_wrapper .panel .newsletter a { font-size: 0.75em; margin: auto; }
   #wrapper #inner_wrapper #newsletter .newsletter input[type="submit"] { margin: 0px 20%; }
   #wrapper #inner_wrapper #newsletter .newsletter input[type="email"] { margin-top: 0.5rem; }
   #wrapper #inner_wrapper #newsletter .newsletter input[type="text"] { margin-top: 0.3rem; }
   #wrapper footer { height: 70px; }
   #wrapper #footer_nav li { width: 16.3459%; } }
+@media (max-width: 375px) { #wrapper .title-bar { width: 15%; }
+  #wrapper #apDiv1 { width: 95.949%; height: 400px; font-size: 0.80em; left: 2%; }
+  #wrapper #apDiv1 p .dropcap { width: 15%; }
+  #wrapper #apDiv1 p.formnum .dropcap { width: 22%; } }
 /* Mobiles in landscape mode */
 @media (max-width: 360px) { .tabs { height: auto; }
+  #wrapper .title-bar { width: 15%; }
   #wrapper [data-abide].error small.error { font-size: 0.75rem; margin-bottom: 0.2rem; }
+  #wrapper #header .title-area .name h1 { font-size: 2em; }
   #wrapper #header nav.top-bar .name { height: 60px; list-style: outside none none; }
   #wrapper #header nav.top-bar .name h1 { width: 100%; text-align: left; font-family: "Signika", Verdana, Geneva, arial, sans-serif; color: #FFFFFF; height: 60px; line-height: 60px; margin-top: 0px; }
   #wrapper #header nav.top-bar .name h1 span { margin: 0px 0px 0px 10px; text-align: left; }
